# libcast-xblock

./: .gitignore  CHANGELOG.md  README.rst  setup.cfg  setup.py
libcast_xblock/: __init__.py  libcast_xblock.py
libcast_xblock/public/css/: style.css
libcast_xblock/public/html/: bokecc.html  unavailable.html  video.html  videofront.html  youtube.html
libcast_xblock/public/js/: bokecc.js  libcast_xblock.js  videofront.js  youtube.js
libcast_xblock/static/css/: libcast_xblock.css
libcast_xblock/static/html/: libcast_xblock.html
libcast_xblock/static/js/src/: libcast_xblock.js
