;;
;; FUN package
;;
[metadata]
name = libcast-xblock
version = 0.6.0
description = An XBlock for displaying videos hosted by Videofront or YouTube
long_description = file: README.rst
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/libcast-xblock
license= AGPL 3.0
keywords = Django, Open edX, MOOC, Xblock
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 1.8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
include_package_data = true
install_requires =
    XBlock
packages = find:
zip_safe = False

[options.entry_points]
xblock.v1 =
    libcast_xblock = libcast_xblock:LibcastXBlock

[options.extras_require]
dev =
    wheel

[options.package_data]
libcast_xblock =
    public/css/*.css
    public/html/*.html
    public/js/*.js
    static/css/*.css

[wheel]
universal = 1
